# new-eden-social

./: .bazelrc  .dockerignore  .drone.yaml  .drone.yml  .gitignore  .travis.yml  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_ENVIRONMENT.md  Dockerfile  Procfile  README.md  ROADMAP.md  WORKSPACE  angular-metadata.tsconfig.json  angular.json  app.json  bazel-out  cp-index.sh  docker-compose.yml  example.env  greenkeeper.json  lerna.json  nodemon.json  package-lock.json  package.json  renovate.json  seed.js  skaffold.yaml  tsconfig-bazel.json  tsconfig.json  tslint.json
.circleci/: config.yml
.github/: FUNDING.yml
api/: .travis.yml  Dockerfile  README.md  docker-compose.yml  package.json
api/infra/esi-cache/: varnish-esi.vcl
api/infra/k8s/: api-certificate.yml  api-deployment.yaml  esi-deployment.yaml
api/src/: api.ts
api/src/exceptions/: entityNotFound.exception.ts
charts/alliances/: Chart.yaml  values.yaml
charts/alliances/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
charts/characters/: Chart.yaml  values.yaml
charts/characters/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
charts/corporations/: Chart.yaml  values.yaml
charts/corporations/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
infra/: main.tf
infra/esi-cache/: varnish-esi.vcl
infra/k8s/: admin-permissions.yml  api-deployment.yaml  api-ingress.yml  api-service.yml  esi-certificate.yml  esi-ingress.yml  esi-service.yml  steps.sh
infra/zkill-cache/: nginx-zkill.conf  varnish-zkill.vcl
src/: api.spec.ts  api.ts  importer.ts  killmails.ts  seed.ts  server.spec.ts  server.ts  updater.ts
src/api/: CHANGELOG.md  Dockerfile  example.env  package.json  tsconfig.json  tslint.json
src/api/src/: api.ts  killmails.ts  updater.ts
src/dto/: paggination.dto.ts
src/errors/: ApiException.interface.ts  ApiException.ts  ApiValidationException.interface.ts  ApiValidationException.ts
src/esi-cache/: nginx-esi.conf
src/exceptions/: ApiValidationException.interface.ts  ApiValidationException.ts
src/gateway/: gateway.module.ts  index.ts  package.json  server.ts  tsconfig.base.json  tsconfig.json  tsconfig.lib.json
src/gateway-http/: BUILD.bazel  server.ts
src/gateway-http/authentication/: authentication.interface.ts  invalidToken.exception.ts  unauthenticated.exception.ts
src/gateway-http/character/: character.dto.ts  character.http.controller.ts
src/gateway-http/comment/: comment.dto.ts
src/gateway-http/follow/: follow.controller.ts
src/gateway-http/metascraper/: metascraper.controller.ts
src/gateway-http/notification/: notification.dto.ts
src/gateway-http/post/: post.dto.ts  post.validate.ts
src/gateway-http/shared/: category.dto.ts  group.dto.ts  killmail.dto.ts  location.dto.ts  participant.dto.ts  type.dto.ts
src/gateway/alliance/: alliance.dto.ts  alliance.http.controller.ts
src/gateway/authentication/: authentication.controller.ts  authentication.decorators.ts  authentication.dto.ts  authentication.middleware.ts  unauthenticated.exception.ts
src/gateway/comment/: comment.controller.ts
src/interceptors/: formatter.interceptor.ts
src/interfaces/: service.interface.ts  socket.interface.ts
src/middlewares/: exists.middleware.ts
src/modules/: api.module.ts  app.module.ts  killmails.module.ts  utils.static.ts
src/pipes/: validator.pipe.ts
src/services/corporation/: BUILD.bazel  Dockerfile  corporation.entity.ts  index.ts  package.json  server.ts
src/services/corporation/src/: corporation.controller.ts  corporation.dto.ts  corporation.entity.ts  corporation.interface.ts  corporation.module.ts  corporation.repository.ts  corporation.roles.guard.ts  corporation.service.ts
src/services/corporation/src/grpc/: corporation.grpc.client.options.ts  corporation.grpc.client.ts  corporation.grpc.controller.ts  corporation.grpc.interface.ts  corporation.grpc.module.ts  corporation.proto
src/utils/: Log.ts  utils.static.ts
src/validate/: pagination.validate.ts
src/web/: .gitignore  CHANGELOG.md  Dockerfile  angular.json  karma.conf.js  package.json  server.ts  tsconfig.server.json  tsconfig.server.src.json  tslint.json  webpack.server.config.js
src/zkill-cache/: varnish-zkill.vcl
tools/: prepare-ci.sh
web/: .angular-cli.json  .gitignore  .travis.yml  Dockerfile  README.md  angular.json  package.json
web/e2e/: BUILD.bazel  app.e2e-spec.ts
web/src/: BUILD.bazel  _common.scss  _variables.scss  common.scss  polyfills.ts  variables.scss
(+1057 files in other folders)
